Fix z-index

--- a/src/css/dialogs.css
+++ b/src/css/dialogs.css
@@ -1,6 +1,6 @@
 .dialog-overlay {
 	position: fixed;
-	z-index: 999;
+	z-index: 1060;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -13,7 +13,7 @@
 	font-size: 16px;
 	width: 380px;
 	position: fixed;
-	z-index: 1001;
+	z-index: 1070;
 	background-color: #fff;
 	border-radius: 3px;
 }
